Fixed two problems here: - when exporting tags a folder name "Tag: foo", was used.  Konqueror would state that that protocol is not supported. Removed the : as a solution. - tags do not have a url, so using that as unique identifier in the map, was causing trouble. Exporting four tag albums resulted in four identical folders, because the key always returned 0. Used a QMapIterator and an int as a key.

Could some people check if this is ok?
CCMAIL: digikam-devel@kde.org
BUG: 102219


svn path=/trunk/extragear/libs/kipi-plugins/; revision=443826